# PEPO_Embarcado

./: Instalacao Nano  README.md  app.py  calib_cam_laser.txt  calib_servos.txt  check_gps_fix.py  compilar_ws.sh  driver_wifi.sh  inicio_robo.sh  inicio_robo_sim.sh  liberar_usb_servos.sh  nohup.out  powertop.csv  requirements_app.txt  transferir_codigo.sh  usb_camera_inicio.sh
calib/: camerac925e.yaml
communication/: CMakeLists.txt  package.xml
communication/launch/: envia_dados_zmq.launch  recebe_dados_zmq.launch
communication/src/: encaminha_dados_desktop.cpp  envia_dados_zmq.cpp  system_state.cpp
communication/srv/: state.srv
cv_camera/launch/: calibrar_camera.launch  camera_calibrar.launch  cv_camera.launch
dynamixel-workbench/dynamixel_workbench_controllers/: CMakeLists.txt  package.xml
dynamixel-workbench/dynamixel_workbench_controllers/include/dynamixel_workbench_controllers/: multi_port.h
dynamixel-workbench/dynamixel_workbench_controllers/launch/: multi_port_cap.launch  multi_port_pepo.launch
dynamixel-workbench/dynamixel_workbench_controllers/src/: multi_port.cpp  send_dynamixel_to_zero.cpp
fog/: CMakeLists.txt  package.xml
fog/src/: acc_space2.cpp
gps_uart/: CMakeLists.txt  package.xml
gps_uart/scripts/: gps.py
imu_i2c/: CMakeLists.txt  package.xml
imu_i2c/scripts/: imu.py
led_control/: CMakeLists.txt  package.xml
led_control/scripts/: controle_led.py  inicio_led.py
libraries/include/: dynamixelservos.h  processcloud.h  processimages.h
libraries/src/: dynamixelservos.cpp  processcloud.cpp  processimages.cpp
livox_horizon_loam/: CMakeLists.txt
livox_horizon_loam/launch/: loam_livox_horizon.launch  loam_livox_horizon_imu.launch
livox_horizon_loam/rviz_cfg/: loam_horizon.rviz
livox_horizon_loam/src/: laserMapping.cpp  laserOdometry.cpp  livox_repub.cpp  scanRegistration.cpp
livox_horizon_loam/src/imu_processor/: data_process.cpp
livox_ros_driver/livox_ros_driver/config/: livox_lidar_config.json
livox_ros_driver/livox_ros_driver/launch/: livox_lidar.launch  livox_lidar_msg.launch
livox_ros_driver/livox_ros_driver/livox_ros_driver/: lddc.cpp
pepo_obj/: CMakeLists.txt  package.xml
pepo_obj/launch/: pepo_obj.launch
pepo_obj/src/: scanner_obj.cpp
pepo_space/: CMakeLists.txt  package.xml
pepo_space/launch/: pepo_space.launch  play_fog.launch
pepo_space/src/: .scanner_space3.cpp.swp  scanner_space.cpp  scanner_space2.cpp  scanner_space3.cpp
rosbridge_suite/rosbridge_server/launch/: rosbridge_websocket.launch
test_blur/: CMakeLists.txt  blur.cpp  package.xml
